--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,13 +2,14 @@ name: CD
 on:
   push:
     tags:
-      - "v*.*.*"
-  workflow_dispatch:
+      - "v*.*.*"       # روی تگ‌ها اجرا می‌شود، مثل v1.0.0
+  workflow_dispatch:     # اجرای دستی از تب Actions
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: production
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,30 +20,49 @@ jobs:
           go-version: "1.22.x"
           cache: true
 
-      - name: Build linux binary
+      # اگر go.mod در ریشه است این مرحله لازم است
+      - name: Download deps (root)
+        run: go mod download
+
+      # ✅ مهم: بیلد از پوشهٔ main (دو روش—یکی را نگه دار)
+      # روش 1: با working-directory
+      - name: Build linux binary (from main/)
+        working-directory: main
         run: |
           GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags="-s -w" -o bookstore .
           sha256sum bookstore > bookstore.sha256
 
-      - name: Upload release assets
-        uses: softprops/action-gh-release@v2
+      # --- روش 2 (جایگزین روش 1): اگر working-directory نمی‌خوای ---
+      # - name: Build linux binary (from root, target ./main)
+      #   run: |
+      #     GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags="-s -w" -o bookstore ./main
+      #     sha256sum bookstore > bookstore.sha256
+
+      - name: GitHub Release assets
         if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
         with:
           files: |
-            bookstore
-            bookstore.sha256
+            main/bookstore
+            main/bookstore.sha256
+        # اگر روش 2 را استفاده کردی، بالا را به:
+        #   bookstore
+        #   bookstore.sha256
+        # تغییر بده
 
-      - name: Copy files to server (scp)
+      - name: Copy to server (scp)
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}
-          source: "bookstore"
+          # اگر روش 1 را استفاده می‌کنی:
+          source: "main/bookstore"
           target: "${{ secrets.APP_DIR }}/releases/${{ github.ref_name }}/"
+          # اگر روش 2 را استفاده کردی، source را به "bookstore" تغییر بده
 
-      - name: Activate release (ssh)
+      - name: Activate release (ssh + systemd)
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -50,20 +70,4 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}
           script: |
-            set -euo pipefail
-            APP_DIR="${{ secrets.APP_DIR }}"
-            REL="${{ github.ref_name }}"
-            mkdir -p "$APP_DIR/releases/$REL"
-            ln -sfn "$APP_DIR/releases/$REL" "$APP_DIR/current"
-            cat > "$APP_DIR/current/.env" <<'EOF'
-            ADDR=:8080
-            DB_HOST=${{ secrets.DB_HOST }}
-            DB_PORT=${{ secrets.DB_PORT }}
-            DB_USER=${{ secrets.DB_USER }}
-            DB_PASS=${{ secrets.DB_PASS }}
-            DB_NAME=${{ secrets.DB_NAME }}
-            EOF
-            install -m 0755 "$APP_DIR/releases/$REL/bookstore" "$APP_DIR/bookstore"
-            sudo systemctl daemon-reload || true
-            sudo systemctl restart bookstore.service
-            sudo systemctl status --no-pager --full bookstore.service
+            set -euo p
